Second commit Adding Welcoming and About me section

--- a/src/App.css
+++ b/src/App.css
@@ -14,5 +14,21 @@ body {
 }
 
 .section{
-
+  width: 100%;
+  min-height: 100vh;
 }
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.containerRow{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
