--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,15 +6,31 @@ body {
   }
   
   header {
+    position: sticky;
+    top: 20px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
     margin: 0px 70px 0px 70px;
+    border-style: solid;
+    border-color: var(--accent);
+    border: 1;
+    padding: 0 30px 0 30px;
+    background: rgba( 57, 62, 70, 0.55 );
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 10px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    z-index: 999;
   }
   
   header h1 {
     color: var(--accent);
+  }
+
+  header h1:hover {
+    color: var(--text);
   }
 
 .menu-icon {
@@ -74,6 +90,7 @@ body {
       flex-direction: row;
       text-align: center;
       margin: 10px 30px 10px 30px;
+      padding: 0 10px 0 10px;
     }
   
     nav {
