--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -23,8 +23,10 @@ body {
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     z-index: 999;
+    transition: all 0.5s;
   }
-  
+
+
   header h1 {
     color: var(--accent);
   }
