--- a/src/components/ContatctUs/Contact.css
+++ b/src/components/ContatctUs/Contact.css
@@ -2,6 +2,11 @@
     color: #00adb5;
 }
 
+.contactUS{
+    background: rgb(34,40,49);
+    background: linear-gradient(0deg, rgba(34,40,49,1) 0%, rgba(57,62,70,1) 100%);
+}
+
 .card{
     background: rgba( 57, 62, 70, 0.55 );
     backdrop-filter: blur( 10px );
