--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -27,11 +27,11 @@ body {
   }
 
 
-  header h1 {
+  .Link{
     color: var(--accent);
   }
 
-  header h1:hover {
+  .Link:hover {
     color: var(--text);
   }
 
